--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,26 +8,25 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow = "1.0.86"
-clap = { version = "4.5.9", features = ["derive"] }
+anyhow = "1.0.93"
+clap = { version = "4.5.21", features = ["derive", "env", "string"] }
 dirs = "5.0.1"
 fuzzy-matcher = "0.3.7"
-globwalk = "0.9.1"
-mlua = { version = "0.9.9", features = [
+mlua = { version = "0.10.2", features = [
   "lua54",
   "macros",
+  "send",
   "serialize",
-  "unstable",
   "vendored",
 ] }
-once_cell = "1.19.0"
-ratatui = "0.27.0"
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
+once_cell = "1.20.2"
+ratatui = "0.29.0"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
 tmux_interface = { version = "0.3.2", default-features = false, features = [
   "tmux_stable",
 ] }
-unicode-segmentation = "1.11.0"
+unicode-segmentation = "1.12.0"
 
 [lints.rust]
 nonstandard_style = { level = "deny", priority = -1 }
