--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2024"
 publish = false
 
 [dependencies]
-anyhow = "1.0.96"
-clap = { version = "4.5.30", features = ["derive", "env", "string"] }
-fuzzy-matcher = "0.3.7"
+ahash = "0.8.11"
+anyhow = "1.0.98"
+clap = { version = "4.5.37", features = ["derive", "env", "string"] }
+frizbee = "0.3.0"
 mlua = { version = "0.10.3", features = [
   "lua54",
   "macros",
@@ -18,10 +19,9 @@ mlua = { version = "0.10.3", features = [
   "serialize",
   "vendored",
 ] }
-once_cell = "1.20.3"
-ratatui = "0.29.0"
-serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.139"
+ratatui = "0.30.0-alpha.2"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 tmux_interface = { version = "0.3.2", default-features = false, features = [
   "tmux_stable",
 ] }
