--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,4 +34,5 @@ unsafe_code = "forbid"
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
 similar_names = "allow"
+unused_trait_names = "warn"
 unwrap_used = "warn"
