--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ publish = false
 ahash = "0.8.11"
 anyhow = "1.0.98"
 clap = { version = "4.5.37", features = ["derive", "env", "string"] }
+dirs = "6.0.0"
 frizbee = "0.3.0"
 mlua = { version = "0.10.3", features = [
   "lua54",
